<resources>
    <string name="app_name">MuscleApplication</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="logout">Logout</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signin">Signin</string>
    <string name="next">Next</string>
    <string name="inputprofile">InputProfile</string>
    <string name="usertype">User Type</string>
    <string name="trainee">Trainee</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="workoutexperience">Workout Experience</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="professional">Professional</string>
    <string name="height">Height:</string>
    <string name="weight">Weight(Kg):</string>
    <string name="nickname">Nickname:</string>
    <string name="introduction">Describe yourself:</string>
    <string name="choosephoto">Choose Photo</string>
    <string name="chooseyourprofilephoto">Choose your profile photo</string>
    <string name="done">Done</string>
    <string name="trainer">Trainer</string>
    <string name="chinchin">Chinchin</string>
    <string name="login_error_message">Please make sure you enter an email address and password</string>
    <string name="login_error_title">Error</string>
    <string name="signup_error_message">Please make sure you enter email address and password</string>
    <string name="signup_error_title">Error</string>
    <string name="profile">Profile</string>
    <string name="match">Match</string>
    <string name="chat">Chat</string>
    <string name="award">Award</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="protein_des">An essential macronutrient that helps build muscle, repair tissue, and make enzymes and hormones.</string>
    <string name="organic_protein_des">Non-GMO Vegan Protein powder made with a complete profile of all the essential amino acids along</string>
    <string name="eaa_des">Provides the specialized nutrients your body needs to repair existing muscle tissue and build new muscle tissue</string>
    <string name="bcaa_des">Taken in order to boost muscle growth and enhance exercise performance.</string>
    <string name="creatine_des">Helps your muscles produce energy during heavy lifting or high-intensity exercise</string>
    <string name="glutamine_des">important amino acid with many functions in the body building block of protein and critical part of the immune system</string>
    <string name="hmb_des">needed by the body to protect and repair muscle tissue</string>
    <string name="wrist_wrap_des">to provide support to the wrist joint during heavy or max effort lifts</string>
    <string name="training_tube_des">lightweight, portable and durable. Effective when used alone, or with handles and anchors.</string>
    <string name="lifting_belt_des">designed to help brace your lower back and core during strength training exercises like deadlifts and squats</string>
    <string name="energy_drink_des">An Energy Drink</string>
    <string name="ab_roller_des">Ab-Roller</string>
    <string name="push_up_bars_des">Push-Up Bars</string>
    <string name="experience">Experience</string>
</resources>
